<resources>

    <string name="app_name">Hobby</string>

    <string name="label_address">Adress:</string>
    <string name="label_phone">Tel:</string>
    <string name="label_email">E-postadress:</string>
    <string name="remove">Ta bort</string>

    <string name="app_error_internal">Internt fel. Var god prova igen.</string>
    <string name="app_error_invalid_credentials">Användarnamn eller lösenord är ogilltigt.</string>
    <string name="app_error_no_response">Ingen respons från servern. Var god prova igen.</string>
    <string name="app_send_command_messsage">Var god vänta...</string>
    <string name="app_error_title">Ett fel uppstod.</string>

    <string name="app_loading_title">Laddar... Var god vänta</string>
    <string name="app_camping_update_title">Hämtar och uppdaterar campingar... Var god vänta!</string>
    <string name="app_camping_load_from_local_db_title">Läser in campingar från lokala databasen... Det kan ta några minuter! Var god vänta!</string>
    <string name="app_camping_save_to_local_db_title">Sparar till lokala databasen... Det kan ta några minuter! Var god vänta!"</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Inställningar</string>

    <string name="nav_myhobby">My Hobby</string>
    <string name="nav_service_book">Serviceboken</string>
    <string name="nav_catalog_and_magazines">Katalog &amp; Magasin</string>
    <string name="nav_resellers">Återförsäljare</string>
    <string name="nav_faq">Vanliga frågor</string>
    <string name="nav_campings">Campingar</string>
    <string name="nav_logout">Logga ut</string>
    <string name="menu_header_logged_out">Ej inloggad</string>

    <string name="login_create_account">Inget konto ännu? Klicka här för att skapa ett!</string>
    <string name="login_email">E-post:</string>
    <string name="login_forgot_password">Glömt lösenord?</string>
    <string name="login_login">Logga in</string>
    <string name="login_password">Lösenord:</string>

    <string name="start_my_hobby_title">My Hobby</string>
    <string name="start_my_hobby_control_caravan">Styr husvagnen från mobilen</string>
    <string name="start_service_book">Serviceboken</string>
    <string name="start_service_book_keep_control">Behåll kontrollen</string>
    <string name="start_resellers">Återförsäljare</string>
    <string name="start_catalog_and_magazines">Katalog &amp; Magasin</string>
    <string name="start_faq">Vanliga frågor</string>
    <string name="start_faq_for_caravan_owners">För husvagnsägare</string>
    <string name="start_my_page">Min sida</string>
    <string name="start_settings_and_notifications">Inställningar &amp; Notiser</string>
    <string name="start_camping">Campingar</string>
    <string name="start_camping_find_vacation_spot">Hitta semesterplatsen</string>


    <string name="my_hobby_battery_loading">Battery Loading</string>
    <string name="my_hobby_water_in_tank">Water In Tank</string>

    <string name="temp_outside">Outside</string>
    <string name="temp_in_caravan">In Caravan</string>
    <string name="active_timers">Active timers</string>
    <string name="active_lamps">Active lamps</string>

    <!-- Position page -->
    <string name="position_title">Position &amp; Weather</string>
    <string name="register_activation_mail_sent">An activation mail is sent to activate your account</string>
    <string name="register_email">E-post:</string>
    <string name="register_error_email_required">E-post är obligatoriskt fält!</string>
    <string name="register_error_firstname_required">Förnamn är obligatoriskt fält!</string>
    <string name="register_error_lastname_required">Efternamn är obligatoriskt fält!</string>
    <string name="register_error_password_required">Lösenord är obligatoriskt fält!</string>
    <string name="register_sure_name">Förnamn</string>
    <string name="register_last_name">Efternamn</string>
    <string name="register_password">Lösenord</string>
    <string name="register_register">Registrera</string>

    <string name="faq_tag_manage_caravan">Sköta husvagnen</string>
    <string name="faq_tag_tips_for_camping_life">Tips för campinglivet</string>
    <string name="faq_tag_myhobby">My Hobby</string>
    <string name="faq_tag_submit">Bekräfta</string>

    <string name="resellers_map">Karta</string>
    <string name="resellers_list">Lista</string>



    <string name="reseller">Återförsäljare</string>
    <string name="workshop">Verkstad</string>
    <string name="reseller_call">Ring</string>
    <string name="reseller_send_email">Skicka e-post</string>
    <string name="reseller_visit_homepage">Besök webbplats</string>
    <string name="reseller_show_route">Visa vägbeskrivning</string>
    <string name="reseller_show">Visa</string>

    <string name="must_be_logged_in">Du måste logga in!</string>

    <!-- Service book -->
    <string name="test_demo">Testa demo</string>
    <string name="try_simulation">Prova simulering av serviceboken</string>
    <string name="connect_service_book">Anslut till serviceboken</string>
    <string name="required_key">Kräver nyckel eller chassinr</string>
    <string name="model">Modell:</string>
    <string name="model_year">Årsmodell:</string>
    <string name="vehicle_identification_number_title">Chassinr:</string>
    <string name="in_trafic_title">Togs i trafik:</string>
    <string name="in_guarantee_date_title">Täthetsgaranti giltig t.o.m.:</string>
    <string name="service_book">Servicebok</string>
    <string name="approved">Godkänd</string>
    <string name="not_approved">Ej godkänd</string>
    <string name="service_book_demo">Servicebok DEMO</string>
    <string name="find_reseller">Hitta återförsäljare för att boka servicetid!</string>
    <string name="logout_secvice_book">Logga ut servicebok</string>
    <string name="service_book_hint">Ange 7 sista tecknen av ditt chassinummr</string>

    <!--Service details -->
    <string name="responsible_title">Ansvarig för utförande:</string>
    <string name="status_title">Status:</string>
    <string name="don_date_title">Utfördes:</string>
    <string name="warranty">Garantijob</string>
    <string name="seal_test">Täthetstest</string>

    <!--Connect to service -->
    <string name="vin_number">Chassinummer</string>
    <string name="enter_vin_number">Ange chassinummer</string>
    <string name="caravan_not_found">Hittade inte nån husvagn eller husbil!</string>

    <!--Campings -->
    <string name="camping_show">Visa</string>
    <string name="general_facilities">Allmänna faciliteter</string>
    <string name="activity_facilities">Aktivitetsfaciliteter</string>
    <string name="other_facilities">Övriga faciliteter</string>
    <string name="show_all_campings">Visa alla</string>
    <string name="camping_opening_hours">Öppettider</string>
    <string name="camping_opening_hours_from_label">Från:</string>
    <string name="camping_opening_hours_to_label">Till:</string>
    <string name="camping_choose_date">Välj datum...</string>
    <string name="camping_clear_date">Rensa</string>
    <string name="camping_read_about">Läs om campingen</string>
    <string name="filter">Filtrerar... Var god vänta!</string>

    <string name="camping_general_facilities">Allmänna faciliteter</string>
    <string name="camping_activity_facilities">Aktivitetsfaciliteter</string>
    <string name="camping_other_facilities">Övriga faciliteter</string>
    <string name="camping_of_housing">Boendeformer</string>
    <string name="camping_opening_hours_">Öppettider</string>
    <string name="camping_contact_and_directions">Kontakt &amp; Vägbeskrivning</string>
    <string name="camping_read_about_camping">Läs om campingen</string>
    <string name="camping_opening_hours_title">Öppet</string>
    <string name="camping_full_service_opening_hours_title">Öppet fullservice</string>
    <string name="contact_address">Adress:</string>
    <string name="contact_phone">Telefon:</string>
    <string name="contact_email">E-postadress:</string>
    <string name="camping_grade_title">Betyg</string>

    <string name="my_page">Min sida</string>
    <string name="my_settings">Mina inställningar</string>
    <string name="messages">Meddelanden</string>
    <string name="not_logged_in">Ej inloggad</string>
    <string name="my_dealer_workshop">Min återförsäljare/verkstad</string>

    <string name="my_dealer_not_chosen">Ingen återförsäljare vald</string>
    <string name="my_workshop_not_chosen">Ingen verkstad vald</string>
    <string name="no_workshop">Erbjuder ej verkstad</string>

    <string name="settings_for_notifications">Inställningar för notiser</string>
    <string name="news_and_offers">Nyheter &amp; erbjudanden</string>
    <string name="service_reminder">Servicepåminnelser</string>

    <string name="sync">Synkroniserar med databasen...</string>

    <string name="hint_email">E-post</string>
    <string name="hint_password">Lösenord</string>
    <string name="hint_sure_name">Förnamn</string>
    <string name="hint_last_name">Efternamn</string>

    <string name="no_messages">Du har inga meddelanden</string>

    <string name="dealer_offers_on">Nyheter och erbjudanden från den valda återförsäljaren - PÅ</string>
    <string name="dealer_offers_off">Nyheter och erbjudanden från den valda återförsäljaren - AV</string>

    <string name="search">Sök</string>

    <string name="catalogue">Katalog 2018</string>

    <string name="go_to_reseller">Gå till återförsäljare</string>

</resources>
