<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_my_hobby"
            android:icon="@drawable/ic_menu_myhobby"
            android:title="@string/nav_myhobby" />
        <item
            android:id="@+id/nav_service_book"
            android:icon="@drawable/ic_menu_servicebook"
            android:title="@string/nav_service_book" />
        <item
            android:id="@+id/nav_catalog_and_magazines"
            android:icon="@drawable/ic_menu_catalogue"
            android:title="@string/nav_catalog_and_magazines" />
        <item
            android:id="@+id/nav_resellers"
            android:icon="@drawable/ic_menu_reseller"
            android:title="@string/nav_resellers" />
        <item
            android:id="@+id/nav_faq"
            android:icon="@drawable/ic_menu_faq"
            android:title="@string/nav_faq" />
        <item
            android:id="@+id/nav_campings"
            android:icon="@drawable/ic_menu_camping"
            android:title="@string/nav_campings" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_menu_logout"
            android:title="@string/nav_logout" />
    </group>

    <!--<item android:title="Communicate">-->
        <!--<menu>-->
            <!--<item-->
                <!--android:id="@+id/nav_share"-->
                <!--android:icon="@drawable/ic_menu_share"-->
                <!--android:title="Share" />-->
            <!--<item-->
                <!--android:id="@+id/nav_send"-->
                <!--android:icon="@drawable/ic_menu_send"-->
                <!--android:title="Send" />-->
        <!--</menu>-->
    <!--</item>-->

</menu>
