<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="#ffffff"
        android:padding="20dp"
        android:id="@+id/registerLayout"
        android:visibility="visible">

        <EditText
            android:id="@+id/editRegisterFirstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:background="@android:color/transparent"
            android:textColor="@color/text_dark_grey"
            android:hint="@string/hint_sure_name"
            android:textColorHint="#bbbbbb"
            android:padding="10dp"/>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            style="@style/DividerHorizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"/>

        <EditText
            android:id="@+id/editRegisterLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:background="@android:color/transparent"
            android:textColor="@color/text_dark_grey"
            android:hint="@string/hint_last_name"
            android:textColorHint="#bbbbbb"
            android:padding="10dp"/>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            style="@style/DividerHorizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"/>

        <EditText
            android:id="@+id/editRegisterEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:background="@android:color/transparent"
            android:textColor="@color/text_dark_grey"
            android:hint="@string/hint_email"
            android:textColorHint="#bbbbbb"
            android:padding="10dp"/>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            style="@style/DividerHorizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"/>

        <EditText
            android:id="@+id/editRegisterPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:textColor="@color/text_dark_grey"
            android:hint="@string/hint_password"
            android:textColorHint="#bbbbbb"
            android:background="@drawable/input_bg"
            android:padding="10dp"/>


        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            style="@style/DividerHorizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"/>


        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/register_register"
            android:id="@+id/btnRegisterRegister"
            android:background="@drawable/info_button"
            android:textColor="#ffffff"
            android:layout_marginTop="20dp" />

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="#ffffff"
        android:padding="20dp"
        android:id="@+id/registeredLayout"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/register_activation_mail_sent"
            android:id="@+id/textActivationMailSent" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_login"
            android:id="@+id/btnRegistered"
            android:background="@drawable/info_button"
            android:textColor="#ffffff"
            android:layout_marginTop="10dp" />
    </LinearLayout>

</FrameLayout>