<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:padding="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:background="#ffffff"
        android:orientation="vertical"
        android:padding="20dp">

        <EditText
            android:id="@+id/editLoginEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:ems="10"
            android:inputType="textEmailAddress"
            style="@style/InputTextTheme"
            android:textColor="@color/text_dark_grey"
            android:hint="@string/hint_email"
            android:textColorHint="#bbbbbb"
            android:background="@drawable/input_bg"/>



        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            style="@style/DividerHorizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"/>

        <EditText
            android:id="@+id/editLoginPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:ems="10"
            android:inputType="textPassword"
            style="@style/InputTextTheme"
            android:textColor="@color/text_dark_grey"
            android:hint="@string/hint_password"
            android:textColorHint="#bbbbbb"
            android:background="@drawable/input_bg"/>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            style="@style/DividerHorizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"/>

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_login"
            android:id="@+id/btnLoginLogin"
            android:background="@drawable/info_button"
            android:focusable="true"
            android:textColor="#ffffff"
            android:layout_marginTop="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/login_forgot_password"
            android:id="@+id/txtForgotPassword"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:textColorLink="#984040"
            android:textIsSelectable="false"
            android:textStyle="bold"
            android:layout_marginLeft="10dp"
            android:focusable="false"
            android:textColor="@color/text_dark_grey" />

    </LinearLayout>


    <TextView
        android:id="@+id/txtLoginRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="5dp"
        android:padding="10dp"
        android:text="@string/login_create_account"
        style="@style/InputTextTheme"
        android:textColorLink="#984040"
        android:textIsSelectable="false"
        android:focusable="false"
        android:textStyle="bold"
        android:background="@android:color/transparent"
        android:textColor="@color/white"/>


</LinearLayout>