<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_height="wrap_content"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:layout_marginTop="5dp"
        android:paddingRight="5dp"
        android:paddingLeft="5dp"
        android:paddingBottom="15dp"
        android:gravity="center">

        <LinearLayout
            android:id="@+id/linearLayoutCampingTimes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="5dp"
            android:background="@drawable/faq_list_search_bg">
            <LinearLayout
                android:id="@+id/linearLayoutAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/bg_service_item"
                android:padding="5dp">

                <TextView
                    android:id="@+id/txtAddressTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/contact_address"
                    android:textColor="@color/text_dark_grey"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:textColor="@color/text_dark_grey"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayoutPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/bg_service_item"
                android:padding="5dp">

                <TextView
                    android:id="@+id/txtPhoneTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/contact_phone"
                    android:textColor="@color/text_dark_grey"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:textColor="@color/text_dark_grey"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayoutEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/bg_service_item"
                android:padding="5dp">

                <TextView
                    android:id="@+id/txtEmailTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/contact_email"
                    android:textColor="@color/text_dark_grey"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:textColor="@color/text_dark_grey"
                    android:textSize="16sp" />
            </LinearLayout>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btnCampingCall"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/info_button"
                android:text="@string/reseller_call"
                android:textAllCaps="false"
                android:textColor="#ffffff" />

            <Button
                android:id="@+id/btnCampingSendEmail"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/btnCampingCall"
                android:layout_marginTop="10dp"
                android:background="@drawable/info_button"
                android:text="@string/reseller_send_email"
                android:textAllCaps="false"
                android:textColor="#ffffff" />

            <Button
                android:id="@+id/btnCampingVisitHomepage"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/btnCampingSendEmail"
                android:layout_marginTop="10dp"
                android:background="@drawable/info_button"
                android:text="@string/reseller_visit_homepage"
                android:textAllCaps="false"
                android:textColor="#ffffff" />

            <Button
                android:id="@+id/btnCampingShowRoute"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/btnCampingVisitHomepage"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/info_button"
                android:text="@string/reseller_show_route"
                android:textAllCaps="false"
                android:textColor="#ffffff" />

            <LinearLayout
                android:id="@+id/campingDetailsMapLayout"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:orientation="horizontal"
                android:layout_below="@id/btnCampingShowRoute">

                <fragment
                    android:id="@+id/mapCampingDetails"
                    class="com.google.android.gms.maps.MapFragment"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    tools:context=".MapsActivity" />

            </LinearLayout>
        </RelativeLayout>

    </LinearLayout>
</ScrollView>

