<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_centerInParent="true"
    android:layout_marginTop="5dp"
    android:paddingRight="5dp"
    android:paddingLeft="5dp">

    <LinearLayout
        android:id="@+id/searchLaytout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="10"
        android:background="@drawable/faq_list_search_bg">

        <EditText
            android:id="@+id/txtSearchFaq"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            android:drawableLeft="@drawable/search_icon"
            android:hint="Sök" />

        <ImageView
            android:id="@+id/imageSearchFilter"
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:srcCompat="@drawable/ic_search_filter"
            android:layout_gravity="center"/>
    </LinearLayout>

    <ListView
        android:id="@+id/listViewFaqs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/faq_list_bg"/>

    <FrameLayout
        android:id="@+id/frameFaqTags"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/radioTag"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">
            <RadioButton android:id="@+id/faqTagManageCaravan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/faq_tag_manage_caravan"
                />
            <RadioButton android:id="@+id/faqTagCampingTips"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/faq_tag_tips_for_camping_life"
                />
            <RadioButton android:id="@+id/faqTagMyHobby"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/faq_tag_myhobby"
                />
        </RadioGroup>

    </FrameLayout>

</LinearLayout>